# neural-snake

./: .gitignore  CMakeLists.txt  DIARY.md  README.md  build_and_run.bat  build_log.txt  build_only.bat  build_only.ps1  get_specs.ps1  strip_audio.ps1
models/: best.genome
src/: app.cpp  app.h  main.cpp
src/eval/: evaluator.cpp  evaluator.h  network.cpp  network.h
src/game/: snake_game.cpp  snake_game.h
src/neat/: genome.cpp  genome.h  neat_params.h  population.cpp  population.h  species.h
src/util/: random.h
